--- a/preprocessingRegionalData/dataPreprocessing_StatewideDemo_CitMon.Rmd
+++ b/preprocessingRegionalData/dataPreprocessing_StatewideDemo_CitMon.Rmd
@@ -333,6 +333,25 @@ rm(Regional_Sites_AU) # clean up workspace
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ### Assessment QA time out
 
 So those above datasets need to be thoroughly reviewed and QAed to make sure each station is in fact unique and have all the correct associated data with it. When that is done, you can bring the data back in.
@@ -353,7 +372,7 @@ source('snappingFunctions/snapOrganizationFunctions_citmon.R') # functions to do
 
 citMonAU <- read_excel('processedStationData/citmon/CitMon_stations_QA_Final.xlsx','Paula_NEW')
 
-monitor <- read_excel('processedStationData/citmon/MONITOR16May2019.xlsx')
+monitor <- read_excel('processedStationData/citmon/MONITOR17May2019.xlsx')
 ```
  
 First let's delete any weird things they want gone and then it is time to correct the FDT_STA_ID based on Mary and Paula's calls. We will replace the FDT_STA_ID assigned by James with Mary and Paula's call and then update all the associated information accordingly based on the MONITOR database.
@@ -373,36 +392,18 @@ citMonAU3 <- left_join(citMonAU2, monitor, by='STATION') %>%
 
 
 
-notfine <- filter(citMonAU2, is.na(TRECORD))
+notfine <- filter(citMonAU3, is.na(TRECORD))
+nrow(notfine) == 0 #@ yayyyy no issues!
+
+rm(notfine); rm(citMonAU2)
 
 
-
-
-
- %>% # only keep things that worked
-  mutate(FDT_STA_ID = STATION, STA_DESC = DESCRIP, Latitude = MDEC_LAT, Longitude = MDECLONG) %>%
-  dplyr::select(`AU to connect to`,names(fine))
-
+citMonAU4 <- mutate(citMonAU3, FDT_STA_ID = STATION, STA_DESC = DESCRIP, Latitude = MDEC_LAT, Longitude = MDECLONG) %>% # keep only information from MONITOR, overwrite James
+  dplyr::select(`AU to connect to`,everything()) %>%
+  select(-c(Group_Station_ID,STATION_ID, ID305B_2:Larry))
+rm(citMonAU3)
 ```
 
-Start fixing the not fine.
-
-```{r fixNotFine}
-notfine1 <- rename(notfine, 'STATION' = 'AllMon station') %>%
-  left_join(monitor, by='STATION') 
-
-# fix broken sites now
-
-notfine2 <- filter(notfine1, !is.na(TRECORD)) %>% # only keep things that worked
-  mutate(FDT_STA_ID = STATION, STA_DESC = DESCRIP, Latitude = MDEC_LAT, Longitude = MDECLONG) %>%
-  dplyr::select(`AU to connect to`,names(fine))
-
-
-fineTogether <- rbind(fine, notfine2) %>%
-  dplyr::select(-c(Group_Station_ID,STATION_ID:`...102`))
-
-rm(fine);rm(notfine);rm(notfine1);rm(notfine2)
-```
 
 Now join back to station table from last cycle to get better AU information since mary/paula changed some AUs.
 
@@ -412,27 +413,27 @@ regionCode <- 'BRRO'
 previousCycleStationTable <- read_excel('data/final2020data/tbl_ir_mon_stations.xlsx') %>%
   filter(REGION == regionCode)
 
-fineTogether1 <- mutate(fineTogether, STATION_ID= FDT_STA_ID) %>%
-  left_join(previousCycleStationTable, by= 'STATION_ID') %>%
-  select(`AU to connect to`, ID305B_1, everything())
+citMonAU5 <- mutate(citMonAU4, ID305B_1 = ifelse(is.na(`AU to connect to`), ID305B_1, `AU to connect to`), # take Mary/Paula desired AUs over whatever they called it last cycle
+                    STATION_ID = FDT_STA_ID) %>% # make joining column
+  left_join(previousCycleStationTable, by= c('STATION_ID')) %>%
+  select(`AU to connect to`, ID305B_1.x, ID305B_1.y, everything()) %>%
+  mutate(sameAU = ifelse(ID305B_1.x==ID305B_1.y, T, F)) %>%
+  select(sameAU, everything())
 
-questions <- c('4ABDA-T16-FC', '4AIND-T20-FC', '4AGIL-T0-FC', '4AGIL-T2-FC', '4APCP-T4-FC', '4ABSA-T6-FC', '4AXNX-T8-FC', '4AXNY-T7-FC', '4ACCK-T12-FC', '4ASWC-T13-FC', '4AJUM-T15-FC')
+# so not all new AUs are same as what they called thigns last time. Best to take their current calls
 
-z <- filter(fineTogether1, FDT_STA_ID %in% questions)
-View(z)
-write.csv(z, 'processedStationData/citmon/changedAUs.csv',row.names=F)
-
-  mutate(ID305B_1= ifelse(is.na(ID305B_1),`AU to connect to`,ID305B_1)) %>%
-  dplyr::select(-`AU to connect to`)
+citMonAU6 <- rename(citMonAU5, ID305B_1 = "ID305B_1.x") %>% # keep mary and paula call
+  select(rowname:STATION_ID,ID305B_1, everything()) %>%
+  select(-c(sameAU, `AU to connect to`,ID305B_1.y))
 
 
-cit <- fineTogether1 %>%
+cit <- citMonAU6 %>%
   st_as_sf(coords = c("Longitude", "Latitude"),  # make spatial layer using these columns
            remove = F, # don't remove these lat/lon cols from df
            crs = 4326) # add coordinate reference system, needs to be geographic for now bc entering lat/lng,
 
 
-rm(monitor);rm(previousCycleStationTable); rm(citMonAU); rm(fineTogether)
+rm(monitor);rm(previousCycleStationTable); rm(citMonAU); rm(citMonAU4);rm(citMonAU5);rm(citMonAU6)
 ```
 
 
@@ -499,22 +500,32 @@ notInReservoirWQS <- unique(reservoirStations$FDT_STA_ID)[!( unique(reservoirSta
 
 
 
-
+# So these need to be fixed by hand
 problem <- filter(reservoirStations, FDT_STA_ID %in% notInReservoirWQS)
-st_write(problem,'processedStationData/citmon/lakeStationsNotInLakeWQS.shp')
+st_write(problem,'processedStationData/citmon/lakeStationsNotInLakeWQS2.shp')
 
+# fix individual problem stations
+reservoirStationsWQS_fixed <- mutate(problem, OBJECTID = ifelse(FDT_STA_ID == '4ALVL-CR26-FC', 21455, NA)) %>% # WQS layer error?
+   mutate(OBJECTID = ifelse(FDT_STA_ID == '4AROA-R29-FC', 21455, OBJECTID)) %>% # just barely outside WQS layer
+  st_set_geometry(NULL) %>% # get rid of spatial aspect to force a left join using spatial objects
+  left_join(reservoirWQS %>% st_set_geometry(NULL), by='OBJECTID') %>%
+  # turn back to spatial layer to smash together with good stations
+  st_as_sf(coords = c("Longitude", "Latitude"),  # make spatial layer using these columns
+           remove = F, # don't remove these lat/lon cols from df
+           crs = 4326) %>%# add coordinate reference system, needs to be geographic for now bc entering lat/lng,
+bind_rows(reservoirStationsWQS)
 
-
+## make sure we didnt lose anyone
+nrow(problem) == nrow(reservoirStationsWQS) + length(notInReservoirWQS)
 
 
 # Run all stations that didn't connect to lake WQS polygon through streams snapping tool
-riverineStationsWQS <- filter(cit, !(FDT_STA_ID %in% reservoirStationsWQS$FDT_STA_ID) |
-                                FDT_STA_ID %in% notInReservoirWQS)
+riverineStationsWQS <- filter(cit, !(FDT_STA_ID %in% reservoirStationsWQS_fixed$FDT_STA_ID))
                               
 # Make sure we didn't lose anyone
-nrow(riverineStationsWQS) + nrow(reservoirStationsWQS) == nrow(cit) 
+nrow(riverineStationsWQS) + nrow(reservoirStationsWQS_fixed) == nrow(cit) 
 
-rm(reservoirWQS);rm(reservoirAUs); rm(reservoirStations) # clean up workspace
+rm(reservoirWQS); rm(reservoirStations); rm(problem); rm(reservoirStationsWQS) # clean up workspace
 ```
 
 
@@ -535,9 +546,6 @@ for (i in 1:length(unique(riverineStationsWQS$Basin))){
 Now the list gets smashed together into a single dataframe (tibble).
 
 ```{r smash}
-
-regionalOutput[[1]] <- mutate(regionalOutput[[1]], FDT_STA_ID = FDT_STA_ID.x) %>% select( -c( FDT_STA_ID.x,FDT_STA_ID.y)) %>% select(rowname, FDT_STA_ID, everything())
-
 # smash it all back together, change from lists to single dataframe
 RegionalResults <- do.call("rbind", lapply(regionalOutput, data.frame))
 #View(RegionalResults)
@@ -555,17 +563,353 @@ Lastly, we need to combine the lake and stream stations into a single dataframe.
 
 ```{r combine WQS, echo=F}
 # Reorder columns in reservoirStationsWQS to match RegionalResults to allow row binding
-reservoirStationsWQS <- mutate(reservoirStationsWQS, Point.Unique.Identifier=NA, 
-                               Buffer.Distance=NA, StreamType=NA) %>%
-  select(FDT_STA_ID:COMMENTS, Point.Unique.Identifier, Buffer.Distance, 
+reservoirStationsWQS <- mutate(reservoirStationsWQS_fixed, Point.Unique.Identifier=NA, 
+                               Buffer.Distance=NA, StreamType=NA ) %>%
+  dplyr::select(rowname, FDT_STA_ID:COMMENTS, Point.Unique.Identifier, Buffer.Distance, 
          OBJECTID:FCode, BASIN, WQS_COMMEN, WATER_NAME, SEC, CLASS, 
          SPSTDS, SECTION_DE, Basin_Code, PWS, Trout, Edit_Date, StreamType, 
          Tier_III, Backlog, Shape_Leng)%>%
+  select(-`Number of Station Sampling Events`) %>%
   st_set_geometry(NULL)
 
-RegionalResultsCombined <- rbind(RegionalResults,reservoirStationsWQS)
+almostReady <- select(RegionalResults,-c( Number.of.Station.Sampling.Events, RorL  ))
+
+RegionalResultsCombined <- rbind(almostReady, reservoirStationsWQS)
 #View(RegionalResultsCombined)
+rm(almostReady);rm(Regional_Sites_AU_basin);rm(regionalOutput);rm(RegionalResultsNoWQS);rm(reservoirStationsWQS_fixed);rm(riverineStationsWQS);rm(reservoirStationsWQS);rm(RegionalResults)
 ```
+
+
+
+
+Now time to get raw data from citmon sites into CEDS format. Important to do this before bringing in non Agency data because of potential for mixing up citmon and non agency rownames when looking at raw data.
+
+
+
+```{r citMon Raw organization}
+citRaw <- read_csv('C:/HardDriveBackup/R/GitHub/Rivers-StreamsAssessment/CitizenNonAgency/2020IR Citizen Ambient4.14.19 (2).csv') %>%
+  dplyr::select(Group_Station_ID:`DEQ QA Comments`) # drop junk columns
+
+cit1 <- distinct(citRaw, Group_Station_ID, FDT_STA_ID, Latitude, Longitude, .keep_all =T)  %>%
+  dplyr::select(Group_Station_ID,  FDT_STA_ID:FDT_SPG_CODE, Latitude:STA_CBP_NAME)# drop data to avoid any confusion
+
+citCounts <- cit1 %>% 
+  group_by(Group_Station_ID, Latitude, Longitude) %>%
+  summarize(`Number of Station Sampling Events` = n())
+
+citDetailscit <- cit1 %>% 
+  group_by(Group_Station_ID, Latitude, Longitude) %>%
+  mutate(`Number of Station Sampling Events` = n(),
+         STA_DESC_norm = str_replace_all(STA_DESC, "[^[:alnum:]]", " ")) %>%
+  ungroup() %>%
+  distinct() %>%
+  arrange(Group_Station_ID) 
+citDetailscit$rowname <- c(1:nrow(citDetailscit))
+# ugly addition singe add_rownames() alter data type
+
+
+# now attach the rowname identifier to raw data
+citRaw1 <- left_join(citRaw, 
+                     dplyr::select(citDetailscit, Group_Station_ID, FDT_STA_ID,
+                                   STA_DESC, Latitude, Longitude, rowname),
+                     by= c("Group_Station_ID", "FDT_STA_ID", "STA_DESC","Latitude" ,                        
+                           "Longitude"  ))
+# make sure citRaw1 has same rows as citRaw or some weird join may have happened
+nrow(citRaw1)==nrow(citRaw)
+
+# now just get rows with rowname ( unique stations)
+citRaw2 <- filter(citRaw1, !is.na(rowname)) %>%
+  select(rowname, everything())
+
+
+
+
+# Now filter raw cit data to just sites Mary wants to assess
+citRaw3 <- filter(citRaw2, rowname %in% unique(RegionalResultsCombined$rowname)[!is.na(unique(RegionalResultsCombined$rowname))])
+
+
+# Now overwrite the names James gave raw data to match Mary/Paula call so i can find them in the app 
+citRawFinal <- left_join(citRaw3, 
+                     select(RegionalResultsCombined, rowname, FDT_STA_ID, STA_DESC, Latitude, Longitude), by='rowname') %>%
+  mutate(FDT_STA_ID = FDT_STA_ID.y, STA_DESC = STA_DESC.y, Latitude = Latitude.y, Longitude = Longitude.y) %>% # keep what mary/paula called
+  select(-c(FDT_STA_ID.x, STA_DESC.x, Latitude.x, Longitude.x, FDT_STA_ID.y, STA_DESC.y, Latitude.y, Longitude.y)) %>%
+  select(names(citRaw3)) # reorder columns to original format
+
+
+
+# now make citRawFinal match conventionals
+conventionals <- read_csv('data/final2020data/CEDSWQM_2020_IR_DATA-CONVENTIONALS_20190305.csv') %>%
+  filter(!is.na(Latitude)|!is.na(Longitude)) # remove sites without coordinates
+conventionals$FDT_DATE_TIME2 <- as.POSIXct(conventionals$FDT_DATE_TIME, format="%m/%d/%Y %H:%M") # turn character date format into proper date time format
+
+
+# first make FDT_DATE_TIME column the same
+citRawFinal$FDT_DATE_TIME <- as.POSIXct(citRawFinal$FDT_DATE_TIME, format="%m/%d/%y %H:%M:%S")
+conventionals$FDT_DATE_TIME <- as.POSIXct(conventionals$FDT_DATE_TIME, format="%m/%d/%Y %H:%M")
+
+citRawFinal1 <- mutate(citRawFinal, 
+                      FDT_COMMENT = paste('FDT_COMMENT:', FDT_COMMENT, 
+                                          'QAQC_Comments:',QAQC_Comments,
+                                          'DEQ QA Comments:',`DEQ QA Comments`),
+                      FDT_DATE_TIME2 = as.POSIXct(FDT_DATE_TIME, format="%m/%d/%y %H:%M")) %>%
+  dplyr::select(names(conventionals))
+
+
+# save summary of parameters taken for stations table, things that don't fit into conventionals
+citRawFinalForComments <- mutate(citRawFinal, 
+                      FDT_COMMENT = paste('FDT_COMMENT:', FDT_COMMENT, 
+                                          'QAQC_Comments:',QAQC_Comments,
+                                          'DEQ QA Comments:',`DEQ QA Comments`),
+                      FDT_DATE_TIME2 = FDT_DATE_TIME)
+write.csv(citRawFinalForComments, 'data/CitMonOrganizedDataBRRO.csv', row.names = F)
+
+# Combine with real conventionals
+conventionals2 <- rbind(conventionals, citRawFinal1)
+
+rm(citRaw); rm(citRaw1); rm(citRaw2);rm(citRaw3); rm(citRawFinal1); rm(citDetailscit); rm(cit1); rm(citMonAU1)
+```
+
+
+
+Now bring in nonagency and start by fixing raw data before smashing in non agency stations into station table 2.0.
+
+```{r nonagency}
+
+template <- read_csv('processedStationData/final2020data/RegionalResultsRiverine_BRROFINAL.csv') %>% 
+  mutate(rowname = NA) %>% # keep column for now
+  select(rowname, everything())
+
+
+## Bring in non Agency stations
+
+nonA <- read_csv('processedStationData/citmon/RegionalResultsCombined_NonAgencyBRRO.csv') %>%
+  mutate(VAHU6=VAHU6.x, Huc6_Vahu6 = VAHU6.x) %>%
+  dplyr::select( names(template))
+
+
+nonARaw <- read_csv('C:/HardDriveBackup/R/GitHub/Rivers-StreamsAssessment/CitizenNonAgency/2020IR NONA ambient.csv')  %>%
+  dplyr::select(Group_Station_ID:`DEQ QA Comments`) # drop junk columns for now
+
+
+nonA1 <- distinct(nonARaw, Group_Station_ID, FDT_STA_ID, Latitude, Longitude, .keep_all =T)  %>%
+  dplyr::select(Group_Station_ID,  FDT_STA_ID:FDT_SPG_CODE, Latitude:STA_CBP_NAME)# drop data to avoid any confusion
+
+nonACounts <- nonA1 %>% 
+  group_by(Group_Station_ID, Latitude, Longitude) %>%
+  summarize(`Number of Station Sampling Events` = n())
+
+nonADetailscit <- nonA1 %>% 
+  group_by(Group_Station_ID, Latitude, Longitude) %>%
+  mutate(`Number of Station Sampling Events` = n(),
+         STA_DESC_norm = str_replace_all(STA_DESC, "[^[:alnum:]]", " ")) %>%
+  ungroup() %>%
+  distinct() %>%
+  arrange(Group_Station_ID) 
+nonADetailscit$rowname <- c(1:nrow(nonADetailscit))
+# ugly addition singe add_rownames() alter data type
+
+# now attach the rowname identifier to raw data
+nonARaw1 <- left_join(nonARaw, 
+                     dplyr::select(nonADetailscit, Group_Station_ID, FDT_STA_ID,
+                                   STA_DESC, Latitude, Longitude, rowname),
+                     by= c("Group_Station_ID", "FDT_STA_ID", "STA_DESC","Latitude" ,                        
+                           "Longitude"  ))
+# make sure citRaw1 has same rows as citRaw or some weird join may have happened
+nrow(nonARaw1)==nrow(nonARaw)
+
+# now just get rows with rowname ( unique stations)
+nonARaw2 <- filter(nonARaw1, !is.na(rowname))
+
+
+
+
+# Now filter raw cit data to just sites Mary wants to assess
+nonARaw3 <- filter(nonARaw2, rowname %in% unique(nonA$rowname)[!is.na(unique(nonA$rowname))])
+
+
+# Now overwrite the names James gave raw data to match Mary/Paula call so i can find them in the app 
+nonARawFinal <- left_join(nonARaw3, 
+                     select(nonA, rowname, FDT_STA_ID, STA_DESC, Latitude, Longitude), by='rowname') %>%
+  mutate(FDT_STA_ID = FDT_STA_ID.y, STA_DESC = STA_DESC.y, Latitude = Latitude.y, Longitude = Longitude.y) %>% # keep what mary/paula called
+  select(-c(FDT_STA_ID.x, STA_DESC.x, Latitude.x, Longitude.x, FDT_STA_ID.y, STA_DESC.y, Latitude.y, Longitude.y)) %>%
+  select(names(nonARaw3)) # reorder columns to original format
+
+
+# first make FDT_DATE_TIME column the same
+nonARawFinal$FDT_DATE_TIME <- as.POSIXct(nonARawFinal$FDT_DATE_TIME, format="%m/%d/%y %H:%M")
+
+
+
+# now make citRawFinal match conventionals
+#conventionals <- read_csv('data/final2020data/CEDSWQM_2020_IR_DATA-CONVENTIONALS_20190305.csv') %>%
+#  filter(!is.na(Latitude)|!is.na(Longitude)) # remove sites without coordinates
+#conventionals$FDT_DATE_TIME2 <- as.POSIXct(conventionals$FDT_DATE_TIME, format="%m/%d/%Y %H:%M") # turn character date format into proper date time format
+
+nonARawFinal1 <- mutate(nonARawFinal, 
+                      FDT_COMMENT = paste('FDT_COMMENT:', FDT_COMMENT, 
+                                          'QAQC_Comments:',QAQC_Comments,
+                                          'DEQ QA Comments:',`DEQ QA Comments`),
+                      FDT_DATE_TIME2 = FDT_DATE_TIME) %>%
+                      #FDT_DATE_TIME2 = as.POSIXct(FDT_DATE_TIME, format="%m/%d/%y %H:%M")) %>%
+  dplyr::select(names(conventionals))
+
+# save summary of parameters taken for stations table, things that don't fit into conventionals
+nonARawFinalForComments <- mutate(nonARawFinal, 
+                      FDT_COMMENT = paste('FDT_COMMENT:', FDT_COMMENT, 
+                                          'QAQC_Comments:',QAQC_Comments,
+                                          'DEQ QA Comments:',`DEQ QA Comments`),
+                      FDT_DATE_TIME2 = FDT_DATE_TIME)
+write.csv(nonARawFinalForComments, 'data/NonAgencyOrganizedDataBRRO.csv', row.names = F)
+
+
+# Combine with real conventionals
+conventionals3 <- bind_rows(conventionals2, nonARawFinal1)
+
+
+
+rm(nonARaw); rm(nonARaw1); rm(nonARaw2);rm(nonARaw3); rm(nonARawFinal1); rm(nonADetailscit); rm(nonA1); rm(nonACounts); rm(citCounts)
+
+
+
+
+
+# save new Conventionals data
+write.csv(conventionals3, 'data/conventionals_final2020_citmonNonAgency.csv', row.names = F)
+
+```
+
+
+
+
+
+
+A few more data processing steps to smash citmon into stations table 2.0 for app.
+
+```{r last bit}
+template <- read_csv('processedStationData/final2020data/RegionalResultsRiverine_BRROFINAL.csv') %>% 
+  mutate(rowname = NA, VAHU6 = Huc6_Vahu6) %>% # keep column for now
+  select(rowname, everything())
+
+RegionalResultsCombined2 <- mutate(RegionalResultsCombined, VAHU6=VAHU6.x) %>%
+  dplyr::select( names(template))
+
+# ADD TO final stations table 
+RegionalResults3 <- template %>%
+  rbind(RegionalResultsCombined2)
+
+```
+
+
+
+Now combine unique non agency stations to stations table for app.
+
+```{r nonagency to stationstable}
+# Smash together with non agency
+RegionalResults4 <-  rbind(RegionalResults3, nonA)
+
+
+rm(nonA); rm(template); rm(citMonAU1);rm(RegionalResults3);rm(RegionalResultsCombined);rm(RegionalResultsCombined2);rm(cit)
+
+
+#Split into lake or riverine
+
+
+
+RegionalResults4 $RorL <- NA
+for(i in 1: nrow(RegionalResults4)){
+  RegionalResults4 $RorL[i] <- substr(strsplit(as.character(RegionalResults4 $ID305B_1[i]), '-')[[1]][2] ,4,4)
+  
+}
+
+# Make the rest riverine
+lakeStations <- filter(RegionalResults4, RorL == 'L') %>%
+  select(-RorL)
+
+riverStations <- filter(RegionalResults4, RorL == 'R') %>%
+  select(-c(RorL))
+
+# Make sure we have everyone
+nrow(lakeStations) + nrow(riverStations) == nrow(RegionalResults4)
+
+
+regionCode <- 'BRRO'
+write.csv(select(riverStations,-rowname), paste('processedStationData/final2020data/RegionalResultsRiverine_',
+                                  regionCode,'CitMonNonAgencyFINAL.csv',sep=''), row.names=FALSE)
+
+write.csv(select(lakeStations,-rowname), paste('processedStationData/final2020data/RegionalResultsLake_',
+                                  regionCode,'CitMonNonAgencyFINAL.csv',sep=''), row.names=FALSE)
+saveRDS(RegionalResults4,'processedStationData/final2020data/RegionalResults4.RDS')
+
+
+```
+
+
+
+
+Before we can run the riverine app, we need to attach correct Ecoregion information. Benthics data needs ecoregion attached to unique sites to determine SCI to use.
+
+
+
+```{r ecogregion}
+
+# Bring in Level 3 ecoregion
+library(sf)
+ecoregion <- st_read('GIS/VA_level3ecoregion.shp') %>%
+  st_transform( st_crs(4326)) # transform to WQS84 for spatial intersection
+
+# Bring back in assessment regions information one last time because conventionals
+#doesn't have Basin in 2020
+
+assessmentLayer <- st_read('GIS/AssessmentRegions_VA84_basins.shp') %>%
+  st_transform( st_crs(4326)) # transform to WQS84 for spatial intersection
+
+
+# Make conventionals spatial object
+conventionals_sf <- conventionals3 %>%
+  distinct(FDT_STA_ID, .keep_all = T) %>%
+  st_as_sf( coords = c("Longitude", "Latitude"), 
+            remove = F, # don't remove these lat/lon cols from df
+            crs = 4326)  # add projection, needs to be geographic bc entering lat/lng
+
+# make sure everything will work
+identical(st_crs(conventionals_sf),st_crs(ecoregion))
+identical(st_crs(conventionals_sf),st_crs(assessmentLayer))
+
+# first get Basin information for conventionals, then Ecoregion
+conventionals_sf <-  st_join(conventionals_sf, 
+                             select(assessmentLayer, Basin), join = st_intersects) %>%
+  st_join(select(ecoregion, US_L3CODE, US_L3NAME), join = st_intersects) %>%
+  st_set_geometry(NULL) # take away spatial component so it can go into csv nicely
+
+saveRDS(conventionals_sf, 'data/conventionals_sf_final2020_citmonNonAgency.RDS')
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 This next chunk walks users through saving all the results. The results are saved to a default folder created in this directory called processedStationData. You can find the datasets you need to manually update before entering into the app there. Again, AU and WQS information as formatted by the above code is required for all sites you wish to analyze within the assessment apps. Failure to upload stations in the correct format ensures the app with either break or fail to analyze your data. It is advised that you fix the stations in the RegionalResultsCombined_REGIONCODE.csv. Other spreadsheets and shapefiles of stations missing information are provided for you to use in GIS to make corrections in the RegionalResultsComnined.csv.
